Added a few names and chap titles.

--- a/AntiRats.html
+++ b/AntiRats.html
@@ -18,16 +18,30 @@
                 Introduction: Setting the Stage
             </li>
             <li>
+                Blaise Pascal:
+            </li>
+            <li>
+                Edmund Burke: 
+            </li>
+            <li>
+                Leo Tolstoy:
+            </li>
+            <li>
+                Fyodor Dostoevsky:
+            </li>
+            <li>
                 Lewis Carroll: What the Tortoise Told Achilles
             </li>
             <li>
                 G.K. Chesterton: Chesterton’s Fence 
             </li>
             <li>
-                Alfred North Whitehead: The Fallacy of Misplaced Concreteness
+                Alfred North Whitehead:
+                The Fallacy of Misplaced Concreteness
             </li>
             <li>
                 T.S. Eliot: 
+                Systems So Perfect That No One Has to Be Good
             </li>
             <li>
                 C.S. Lewis: The Abolition of Man
@@ -36,19 +50,23 @@
                 Kurt Godel:
             </li>
             <li>
-                Ludwig Wittgenstein: Following a Rule 
+                Ludwig Wittgenstein: Forms of Life
             </li>
             <li>
                 Michael Oakeshott: Rationalism Is Irrational 
             </li>
             <li>
-                Michael Polanyi: Objective Knowledge Is Subjectively Endorsed 
+                Michael Polanyi:
+                Objective Knowledge Is Subjectively Endorsed 
             </li>
             <li>
                 F.A. Hayek: The Errors of Constructivist Rationalism 
             </li>
             <li>
                 Eric Voegelin: 
+            </li>
+            <li>
+                Paul Feyerabend: Anything Goes
             </li>
             <li>
                 Russell Kirk: 
