--- a/AntiRats.html
+++ b/AntiRats.html
@@ -13,76 +13,144 @@
             The Critics of Modernist Rationalism
         </h1>
 
+        <p>
+            The aim of this project is to provide an overview of the many
+            critics of Enlightenment rationalism. The essays on each thinker
+            are intended not merely to offer an overview of that thinker, but
+            also to place him or her in the context of this larger stream of
+            anti-rationalist thought. Below is a tentative list of chapters,
+            along with a proposed (in violet) or confirmed (in blue) author for
+            the chapter.
+        </p>
+
         <ul>
             <li>
                 Introduction: Setting the Stage
+                <br>
+                <span class="confirmed">
+                    Gene Callahan and Kenneth McIntyre
+                </span>
             </li>
+
             <li>
                 Blaise Pascal:
             </li>
+
             <li>
                 Edmund Burke: 
+                <br>
+                <span class="confirmed">
+                    Ferenc Horcher
+                </span>
             </li>
+
             <li>
                 Leo Tolstoy:
             </li>
+
             <li>
                 Fyodor Dostoevsky:
             </li>
+
             <li>
                 Lewis Carroll: What the Tortoise Told Achilles
+                <br>
+                <span class="confirmed">
+                    Gene Callahan
+                </span>
             </li>
+
             <li>
                 G.K. Chesterton: Chesterton’s Fence 
             </li>
+
             <li>
                 Alfred North Whitehead:
                 The Fallacy of Misplaced Concreteness
             </li>
+
             <li>
                 T.S. Eliot: 
                 Systems So Perfect That No One Has to Be Good
+                <br>
+                <span class="proposed">
+                    Ryan Holston
+                </span>
             </li>
+
             <li>
                 C.S. Lewis: The Abolition of Man
+                <br>
+                <span class="confirmed">
+                    Gene Callahan
+                </span>
             </li>
+
             <li>
-                Kurt Godel:
+                Kurt Godel: The Limits of Formalism
             </li>
+
             <li>
                 Ludwig Wittgenstein: Forms of Life
+                <br>
+                <span class="confirmed">
+                    Daniel Sportiello
+                </span>
             </li>
+
             <li>
                 Michael Oakeshott: Rationalism Is Irrational 
             </li>
+
             <li>
                 Michael Polanyi:
                 Objective Knowledge Is Subjectively Endorsed 
+                <br>
+                <span class="proposed">
+                    Mark Mitchell
+                </span>
             </li>
+
             <li>
                 F.A. Hayek: The Errors of Constructivist Rationalism 
+                <br>
+                <span class="proposed">
+                    Bruce Caldwell
+                </span>
             </li>
+
             <li>
-                Eric Voegelin: 
+                Eric Voegelin: Don't Immanentize the Eschaton
             </li>
+
             <li>
                 Paul Feyerabend: Anything Goes
             </li>
+
             <li>
-                Russell Kirk: 
+                Russell Kirk: The Mystery of Human Existence
             </li>
+
             <li>
                 Jane Jacobs: Critiquing the Rationalist City 
+                <br>
+                <span class="proposed">
+                    Sanford Ikeda    
+                </span>
             </li>
+
             <li>
                 Christopher Alexander: The Timeless Way of Building
             </li>
+
             <li>
                 Alasdair MacIntyre: Putting Virtue in Its Time and Place
             </li>
+
             <li>
-                James C. Scott: 
+                James C. Scott: Seeing Like a Rationalist
             </li>
+
         </ul>
 
     </body>
