Added spans for color mentions.

--- a/AntiRats.html
+++ b/AntiRats.html
@@ -19,7 +19,8 @@
             are intended not merely to offer an overview of that thinker, but
             also to place him or her in the context of this larger stream of
             anti-rationalist thought. Below is a tentative list of chapters,
-            along with a proposed (in violet) or confirmed (in blue) author for
+            along with a proposed (<span class="proposed">in violet</span>)
+            or confirmed (<span class="confirmed">in blue</span>) author for
             the chapter.
         </p>
 
