--- a/AntiRats.html
+++ b/AntiRats.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <title>
-
+            The Critics of Modernist Rationalism
         </title>
     </head>
 
@@ -73,18 +73,10 @@
             <li>
                 T.S. Eliot: 
                 Systems So Perfect That No One Has to Be Good
-                <br>
-                <span class="proposed">
-                    Ryan Holston
-                </span>
             </li>
 
             <li>
                 C.S. Lewis: The Abolition of Man
-                <br>
-                <span class="confirmed">
-                    Gene Callahan
-                </span>
             </li>
 
             <li>
@@ -121,6 +113,14 @@
             </li>
 
             <li>
+                Isaiah Berlin:
+                <br>
+                <span class="confirmed">
+                    Jason Ferrell
+                </span>
+            </li>
+
+            <li>
                 Eric Voegelin: Don't Immanentize the Eschaton
             </li>
 
@@ -137,6 +137,14 @@
                 <br>
                 <span class="proposed">
                     Sanford Ikeda    
+                </span>
+            </li>
+
+            <li>
+                Hans-Georg Gadamer
+                <br>
+                <span class="confirmed">
+                    Ryan Holston
                 </span>
             </li>
 
