Added McIntyre on MacIntyre.

--- a/AntiRats.html
+++ b/AntiRats.html
@@ -108,7 +108,6 @@
                 F.A. Hayek: The Errors of Constructivist Rationalism 
                 <br>
                 <span class="proposed">
-                    Bruce Caldwell
                 </span>
             </li>
 
@@ -154,6 +153,10 @@
 
             <li>
                 Alasdair MacIntyre: Putting Virtue in Its Time and Place
+                <br>
+                <span class="confirmed">
+                    Kenneth McIntyre
+                </span>
             </li>
 
             <li>
