Carroll abstract added.

--- a/AntiRats/kirk.html
+++ b/AntiRats/kirk.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            The Critics of Modernist Rationalism
+            Russell Kirk: The Mystery of Human Existence
         </title>
     </head>
 
@@ -13,15 +13,15 @@
                 <p>
                 <img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160">
+				width="8%">
                 </p>
             </div>
         <h1>
