--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -13,15 +13,15 @@
                 <p>
                 <img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160"><img
+				width="8%"><img
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				height="100" width="160">
+				width="8%">
                 </p>
             </div>
         <h1>
@@ -69,7 +69,9 @@
             </li>
 
             <li>
-                Lewis Carroll: What the Tortoise Told Achilles
+                <a href="carroll.html"> 
+                Lewis Carroll: What the Tortoise Said to Achilles
+                </a>
                 <br>
                 <span class="confirmed">
                     Gene Callahan,
