--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            The Critics of Modernist Rationalism
+            The Critics of Enlightenment Rationalism
         </title>
     </head>
 
@@ -25,7 +25,7 @@
                 </p>
             </div>
         <h1>
-            The Critics of Modernist Rationalism
+            The Critics of Enlightenment Rationalism
         </h1>
 
         <p>
@@ -56,7 +56,9 @@
                 Edmund Burke: 
                 <br>
                 <span class="confirmed">
-                    Ferenc Horcher
+                    Ferenc Horcher,
+                    Pázmány Péter Catholic University, Budapest
+                    and The Institute of Philosophy of the Hungarian Academy of Sciences
                 </span>
             </li>
 
