--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -102,6 +102,9 @@
             <li>
                 T.S. Eliot: 
                 Systems So Perfect That No One Has to Be Good
+                <span class="confirmed">
+                    Corey Abel
+                </span>
             </li>
 
             <li>
