Added two abstracts, Burke and Gadamer.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -53,7 +53,10 @@
             </li>
 
             <li>
+                <a href="burke.html">
                 Edmund Burke: 
+                A Rational and Political Critique of Rationality in Politics
+                </a>
                 <br>
                 <span class="confirmed">
                     Ferenc Horcher,
@@ -173,13 +176,15 @@
             <li>
                 Jane Jacobs: Critiquing the Rationalist City 
                 <br>
-                <span class="proposed">
+                <span class="confirmed">
                     Sanford Ikeda    
                 </span>
             </li>
 
             <li>
-                Hans-Georg Gadamer
+                <a href="gadamer.html">
+                Hans-Georg Gadamer: Anti-Rationalism and Hermeneutics
+                </a>
                 <br>
                 <span class="confirmed">
                     Ryan Holston,
