Added two more abstracts and a new thinker.

--- a/AntiRats/burke.html
+++ b/AntiRats/burke.html
@@ -2,23 +2,46 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            A rational and political critique of rationality in politics
+            A Rational and Political Critique of Rationality in Politics
         </title>
     </head>
 
     <body>
+            <div style="text-align:center">
+                <p>
+                <img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%">
+                </p>
+            </div>
         <h1>
-            A rational and political critique of rationality in politics
+            A Rational and Political Critique of Rationality in Politics
         </h1>
+
+            <p class="author_info">
+            Ferenc Horcher
+            </p>
+            
+            <h2>
+            Abstract
+            </h2>
 
         <p>
             This chapter is going to present Edmund Burke, the 18th century
             statesman and political thinker, as the founder of a political
             tradition, which might with good reason be labelled as British
-            conservatism. One of the key aspects of this - in 1790 newly
-            defined, but not at all new - position is a serious doubt in the
+            conservatism. One of the key aspects of this -- in 1790 newly
+            defined, but not at all new -- position is a serious doubt in the
             usefulness and applicability of a theoretically inclined reason in
             political affairs. Burke’s criticism of the French philosophes did
             not require much more argument than the practical destruction
