--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -85,7 +85,10 @@
             </li>
 
             <li>
-                Friedrich Nietzsche
+                <a href="nietzsche.html">
+                Friedrich Nietzsche:
+                The Hammer Goes to Monticello
+                </a>
                 <br>
                 <span class="confirmed">
                     Justin Garrison,
@@ -100,6 +103,16 @@
             <li>
                 Alfred North Whitehead:
                 The Fallacy of Misplaced Concreteness
+            </li>
+
+            <li>
+                Martin Heidegger:
+                The Limiting Character of the Scientific Method
+                <br>
+                <span class="confirmed">
+                    Jack Simmons,
+                    Georgie Southern
+                </span>
             </li>
 
             <li>
@@ -195,7 +208,11 @@
             </li>
 
             <li>
-                Alasdair MacIntyre: Putting Virtue in Its Time and Place
+                <a href="macintyre.html">
+                Alasdair MacIntyre:
+                Modern Moral Philosophy, Virtue, and Pluralism:  MacIntyre and
+                the Quest for the Human <i>Telos</i>
+                </a>
                 <br>
                 <span class="confirmed">
                     Kenneth McIntyre,
