Adding bios, more contributors.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -37,6 +37,8 @@
             along with a proposed (<span class="proposed">in violet</span>)
             or confirmed (<span class="confirmed">in blue</span>) author for
             the chapter.
+            <br />
+            Contributor bios can be <a href="bios.html">found here</a>. 
         </p>
 
         <ul>
@@ -59,9 +61,17 @@
                 </a>
                 <br>
                 <span class="confirmed">
-                    Ferenc Horcher,
+                    Ferenc Hörcher,
                     Pázmány Péter Catholic University, Budapest
                     and The Institute of Philosophy of the Hungarian Academy of Sciences
+                </span>
+            </li>
+
+            <li>
+                Søren Kierkegaard:
+                <br />
+                <span class="confirmed">
+                Rob Wyllie
                 </span>
             </li>
 
@@ -71,6 +81,10 @@
 
             <li>
                 Fyodor Dostoevsky:
+                <br />
+                <span class="confirmed">
+                Leslie Marsh
+                </span>
             </li>
 
             <li>
@@ -137,6 +151,15 @@
                 <br>
                 <span class="confirmed">
                     Daniel Sportiello
+                </span>
+            </li>
+
+            <li>
+                Gabriel Marcel:
+                <br>
+                <span class="confirmed">
+                Steven Knepper,
+                    VMI
                 </span>
             </li>
 
