--- a/AntiRats/burke.html
+++ b/AntiRats/burke.html
@@ -29,7 +29,7 @@
         </h1>
 
             <p class="author_info">
-            Ferenc Horcher
+            Ferenc Hörcher
             </p>
             
             <h2>
