Added me and style sheet.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
             Contributor Bios
         </title>
@@ -18,6 +18,14 @@
                 Nathanael Blake earned a PhD in political theory from the
                 Catholic University of America, and has written for a variety
                 of scholarly and popular publications.  He resides in Missouri.
+            </li>
+
+            <li>
+                Gene Callahan earned a PhD in political theory from Cardiff
+                University. He is the author of <i>Economics for Real
+                    People</i>, <i>Oakehsott on Rome and America</i>, 
+                and editor of <i>Tradition v. Rationalism</i>. He teaches
+                at New York University.
             </li>
 
             <li>
@@ -40,9 +48,6 @@
                 of the ENlightenment: Aesthetics, Politics, and Religion
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
-            </li>
-
-            <li>
             </li>
         </ul>
 
