--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -45,7 +45,7 @@
                 Philosophy of the Hungarian Academy of Sciences. His
                 publications include Prudentia Iuris. Towards a Pragmatic
                 theory of Natural Law (2000) and the coedited volume: Aspects
-                of the ENlightenment: Aesthetics, Politics, and Religion
+                of the Enlightenment: Aesthetics, Politics, and Religion
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
             </li>
