--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -43,9 +43,10 @@
                 Enlightenment. He is full professor at Pázmány Péter Catholic
                 University in Hungary and director of the Institute of
                 Philosophy of the Hungarian Academy of Sciences. His
-                publications include Prudentia Iuris. Towards a Pragmatic
-                theory of Natural Law (2000) and the coedited volume: Aspects
-                of the Enlightenment: Aesthetics, Politics, and Religion
+                publications include <i>Prudentia Iuris: Towards a Pragmatic
+                    theory of Natural Law</i>
+                (2000) and the coedited volume: <i>Aspects
+                    of the Enlightenment: Aesthetics, Politics, and Religion</i>
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
             </li>
