--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -28,6 +28,10 @@
             The Critics of Enlightenment Rationalism
         </h1>
 
+        <p class="author_info">
+            Editors: Gene Callahan and Kenneth McIntyre
+        </p>
+
         <p>
             The aim of this project is to provide an overview of the many
             critics of Enlightenment rationalism. The essays on each thinker
