Added bio and Sheahan.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -50,6 +50,16 @@
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
             </li>
+
+            <li>
+                Daniel John Sportiello is an assistant professor of philosophy
+                at the University of Mary in North Dakota. He has published
+                several book reviews with the Notre Dame Evolution Working
+                Group; he also contributed a chapter on Eric Voegelin to
+                <i>Tradition v. Rationalism: Voegelin, Oakeshott, Hayek, and
+                    Others</i>.
+            </li>
+
         </ul>
 
 
