--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -144,6 +144,11 @@
 
             <li>
                 C.S. Lewis: The Abolition of Man
+                <br />
+                <span class="confirmed">
+                Luke Sheahan,
+                Duke University
+                </span>
             </li>
 
             <li>
