Added Holston bio.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -38,6 +38,22 @@
             </li>
 
             <li>
+                Ryan R. Holston is Associate Professor at Virginia Military
+                Institute in Lexington, VA, where he teaches political theory.
+                He is also an Associate Editor at the journal Humanitas.  Dr.
+                Holston received his Ph.D. from The Johns Hopkins University,
+                his M.Sc. from The London School of Economics and Political
+                Science, and his B.A. from Dickinson College.  His published
+                work appears in journals such as <i>Harvard Theological
+                    Review</i>, <i>Telos</i>, <i>Modern Age</i>, <i>History of
+                    Political Thought</i>, <i>Political Science Reviewer</i>,
+                and <i>Humanitas</i>.  He is currently writing a monograph
+                whose working title is <i>Tradition and the Deliberative
+                Turn</i> and a co-edited volume entitled <i>The Historical
+                Mind: Humanistic Renewal in a Post-Constitutional Age</i>.
+            </li>
+
+            <li>
                 Ferenc Hörcher is a political philosopher and
                 historian of political thought. His PhD was on the Scottish
                 Enlightenment. He is full professor at Pázmány Péter Catholic
