Updated main index.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                         href="http://www.libertylawsite.org/book-review/oakeshott-and-the-american-founding/">
                         Oakeshott and the American Founding
                     </a>
+                    <br>
+                    <br>
+                    <a
+                        href="https://rowman.com/ISBN/9781498571722/Tradition-v.-Rationalism-Voegelin-Oakeshott-Hayek-and-Others">
+                        Tradition v. Rationalism
+                    </a>
                 </p>
             </div>
 
