--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -21,7 +21,7 @@
             </li>
 
             <li>
-                Gene Callahan earned a PhD in political theory from Cardiff
+                Gene Callahan has a PhD in political theory from Cardiff
                 University. He is the author of <i>Economics for Real
                     People</i>, <i>Oakehsott on Rome and America</i>, 
                 and editor of <i>Tradition v. Rationalism</i>. He teaches
@@ -65,6 +65,20 @@
                     of the Enlightenment: Aesthetics, Politics, and Religion</i>
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
+            </li>
+
+            <li>
+                Kenneth B. McIntyre is an associate professor of political
+                science at Sam Houston State University.  He is the author of
+                <i>The Limits of Political Theory:  Michael Oakeshott on Civil
+                    Association</i>,
+                <i>Herbert Butterfield:  History, Providence, and
+                    Skeptical Politics</i>,
+                and has also written essays on the
+                philosophy of history, ordinary language philosophy, American
+                constitutionalism, and practical reason.  He is currently
+                working on a book on value pluralism, liberty, and the rule of
+                law.
             </li>
 
             <li>
