--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -37,10 +37,9 @@
             critics of Enlightenment rationalism. The essays on each thinker
             are intended not merely to offer an overview of that thinker, but
             also to place him or her in the context of this larger stream of
-            anti-rationalist thought. Below is a tentative list of chapters,
-            along with a proposed (<span class="proposed">in violet</span>)
-            or confirmed (<span class="confirmed">in blue</span>) author for
-            the chapter.
+            anti-rationalist thought. Below is a list of chapters,
+            along with the author for the chapter, and a link to the
+            abstract, if available.
             <br />
             Contributor bios can be <a href="bios.html">found here</a>. 
         </p>
@@ -49,9 +48,7 @@
             <li>
                 Introduction: Setting the Stage
                 <br>
-                <span class="confirmed">
                     Gene Callahan and Kenneth McIntyre
-                </span>
             </li>
 
             <li>
@@ -64,31 +61,21 @@
                 A Rational and Political Critique of Rationality in Politics
                 </a>
                 <br>
-                <span class="confirmed">
                     Ferenc Hörcher,
                     Pázmány Péter Catholic University, Budapest
                     and The Institute of Philosophy of the Hungarian Academy of Sciences
-                </span>
             </li>
 
             <li>
                 Søren Kierkegaard:
                 <br />
-                <span class="confirmed">
                 Rob Wyllie
-                </span>
-            </li>
-
-            <li>
-                Leo Tolstoy:
             </li>
 
             <li>
                 Fyodor Dostoevsky:
                 <br />
-                <span class="confirmed">
                 Leslie Marsh
-                </span>
             </li>
 
             <li>
@@ -96,10 +83,8 @@
                 Lewis Carroll: What the Tortoise Said to Achilles
                 </a>
                 <br>
-                <span class="confirmed">
                     Gene Callahan,
                     New York University
-                </span>
             </li>
 
             <li>
@@ -108,72 +93,50 @@
                 The Hammer Goes to Monticello
                 </a>
                 <br>
-                <span class="confirmed">
                     Justin Garrison,
                     Roanoke College
-                </span>
-            </li>
-
-            <li>
-                G.K. Chesterton: Chesterton’s Fence 
-            </li>
-
-            <li>
-                Alfred North Whitehead:
-                The Fallacy of Misplaced Concreteness
             </li>
 
             <li>
                 Martin Heidegger:
                 The Limiting Character of the Scientific Method
                 <br>
-                <span class="confirmed">
                     Jack Simmons,
                     Georgie Southern
-                </span>
             </li>
 
             <li>
                 T.S. Eliot: 
                 Systems So Perfect That No One Has to Be Good
                 <br>
-                <span class="confirmed">
                     Corey Abel
-                </span>
             </li>
 
             <li>
                 C.S. Lewis: The Abolition of Man
                 <br />
-                <span class="confirmed">
                 Luke Sheahan,
                 Duke University
-                </span>
-            </li>
-
-            <li>
-                Kurt Godel: The Limits of Formalism
             </li>
 
             <li>
                 Ludwig Wittgenstein: Forms of Life
                 <br>
-                <span class="confirmed">
                     Daniel Sportiello
-                </span>
             </li>
 
             <li>
                 Gabriel Marcel:
                 <br>
-                <span class="confirmed">
                 Steven Knepper,
                     VMI
-                </span>
             </li>
 
             <li>
                 Michael Oakeshott: Rationalism Is Irrational 
+                <br />
+                John Coats,
+                Connecticut College
             </li>
 
             <li>
@@ -185,17 +148,13 @@
             <li>
                 F.A. Hayek: The Errors of Constructivist Rationalism 
                 <br>
-                <span class="proposed">
-                </span>
             </li>
 
             <li>
                 Isaiah Berlin:
                 <br>
-                <span class="confirmed">
                     Jason Ferrell,
                     Concordia University
-                </span>
             </li>
 
             <li>
@@ -211,17 +170,14 @@
                 Russell Kirk: The Mystery of Human Existence
                 </a>
                 <br>
-                <span class="confirmed">
                     Nathanael Blake
-                </span>
             </li>
 
             <li>
                 Jane Jacobs: Critiquing the Rationalist City 
                 <br>
-                <span class="confirmed">
-                    Sanford Ikeda    
-                </span>
+                    Sanford Ikeda,
+                    Purchase College
             </li>
 
             <li>
@@ -229,10 +185,8 @@
                 Hans-Georg Gadamer: Anti-Rationalism and Hermeneutics
                 </a>
                 <br>
-                <span class="confirmed">
                     Ryan Holston,
                     VMI
-                </span>
             </li>
 
             <li>
@@ -246,10 +200,8 @@
                 the Quest for the Human <i>Telos</i>
                 </a>
                 <br>
-                <span class="confirmed">
                     Kenneth McIntyre,
                     Sam Houston State University
-                </span>
             </li>
 
             <li>
