Added Heidegger and Quine.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -15,21 +15,41 @@
 
         <ul>
             <li>
-                Nathanael Blake earned a PhD in political theory from the
+                <span class="contrib">Nathanael Blake</span>
+                 earned a PhD in political theory from the
                 Catholic University of America, and has written for a variety
                 of scholarly and popular publications.  He resides in Missouri.
             </li>
 
             <li>
-                Gene Callahan has a PhD in political theory from Cardiff
+                <span class="contrib">Thomas J. Brommage</span>
+                 earned his Ph.D. in philosophy at the
+                University of South Florida, writing on Wittgenstein’s early
+                philosophy. His research mostly centers on the history of
+                analytic philosophy, philosophy of language and logic—although
+                much of his more recent work has been focused on the philosophy
+                of humor. He is a founding member and an executive officer in
+                the Lighthearted Philosophers’ Society. Previously he has
+                taught at USF, as well as at Denison University, University of
+                Tampa, Misericordia University and the University of West
+                Georgia. He is currently a Lecturer at Sam Houston State
+                University in Huntsville, TX.
+            </li>
+
+            <li>
+                <a name="callahan">
+                <span class="contrib">Gene Callahan</span>
+                 has a PhD in political theory from Cardiff
                 University. He is the author of <i>Economics for Real
                     People</i>, <i>Oakehsott on Rome and America</i>, 
                 and editor of <i>Tradition v. Rationalism</i>. He teaches
                 at New York University.
+                </a>
             </li>
 
             <li>
-                Justin D. Garrison is an assistant professor of political
+                <span class="contrib">Justin D. Garrison</span>
+                 is an assistant professor of political
                 science at Roanoke College in Salem, Virginia. He is a
                 political theorist who researches the relationship between
                 politics and the imagination. He is the author of journal
@@ -38,7 +58,8 @@
             </li>
 
             <li>
-                Ryan R. Holston is Associate Professor at Virginia Military
+                <span class="contrib">Ryan R. Holston</span>
+                 is Associate Professor at Virginia Military
                 Institute in Lexington, VA, where he teaches political theory.
                 He is also an Associate Editor at the journal Humanitas.  Dr.
                 Holston received his Ph.D. from The Johns Hopkins University,
@@ -54,7 +75,8 @@
             </li>
 
             <li>
-                Ferenc Hörcher is a political philosopher and
+                <span class="contrib">Ferenc Hörcher</span>
+                 is a political philosopher and
                 historian of political thought. His PhD was on the Scottish
                 Enlightenment. He is full professor at Pázmány Péter Catholic
                 University in Hungary and director of the Institute of
@@ -68,7 +90,9 @@
             </li>
 
             <li>
-                Kenneth B. McIntyre is an associate professor of political
+                <a name="mcintyre">
+                <span class="contrib">Kenneth B. McIntyre</span>
+                 is an associate professor of political
                 science at Sam Houston State University.  He is the author of
                 <i>The Limits of Political Theory:  Michael Oakeshott on Civil
                     Association</i>,
@@ -79,10 +103,22 @@
                 constitutionalism, and practical reason.  He is currently
                 working on a book on value pluralism, liberty, and the rule of
                 law.
+                </a>
             </li>
 
             <li>
-                Daniel John Sportiello is an assistant professor of philosophy
+                <a name="simmons">
+                <span class="contrib">Jack Simmons</span>
+                is a Professor of Philosophy at Georgia Southern
+                University, in Savannah, Georgia. His research focuses on
+                discourse ethics and hermeneutics, leading to publications in
+                bio-ethics, film, television, technology and science.
+                </a>
+            </li>
+
+            <li>
+                <span class="contrib">Daniel John Sportiello</span>
+                 is an assistant professor of philosophy
                 at the University of Mary in North Dakota. He has published
                 several book reviews with the Notre Dame Evolution Working
                 Group; he also contributed a chapter on Eric Voegelin to
