--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -29,7 +29,14 @@
         </h1>
 
         <p class="author_info">
-            Editors: Gene Callahan and Kenneth McIntyre
+            Editors:
+            <a href="bios.html#callahan">
+            Gene Callahan
+            </a>
+            and
+            <a href="bios.html#mcintyre">
+            Kenneth McIntyre
+            </a>
         </p>
 
         <p>
@@ -56,14 +63,15 @@
             </li>
 
             <li>
+                Edmund Burke:
                 <a href="burke.html">
-                Edmund Burke: 
                 A Rational and Political Critique of Rationality in Politics
                 </a>
                 <br>
                     Ferenc Hörcher,
                     Pázmány Péter Catholic University, Budapest
-                    and The Institute of Philosophy of the Hungarian Academy of Sciences
+                    and The Institute of Philosophy of the Hungarian Academy of
+                    Sciences
             </li>
 
             <li>
@@ -79,8 +87,9 @@
             </li>
 
             <li>
+                Lewis Carroll:
                 <a href="carroll.html"> 
-                Lewis Carroll: What the Tortoise Said to Achilles
+                What the Tortoise Said to Achilles
                 </a>
                 <br>
                     Gene Callahan,
@@ -88,8 +97,8 @@
             </li>
 
             <li>
-                <a href="nietzsche.html">
                 Friedrich Nietzsche:
+                <a href="nietzsche.html">
                 The Hammer Goes to Monticello
                 </a>
                 <br>
@@ -99,9 +108,13 @@
 
             <li>
                 Martin Heidegger:
+                <a href="heidegger.html">
                 The Limiting Character of the Scientific Method
+                </a>
                 <br>
+                    <a href="bios.html#simmons">
                     Jack Simmons,
+                    </a>
                     Georgie Southern
             </li>
 
@@ -162,27 +175,41 @@
             </li>
 
             <li>
+                W.V.O. Quine:
+                <a href="quine.html">
+                Who’s a Good Dogma?!?: Perspectives on Quine’s Critique of
+                Analyticity
+                </a>
+                <br />
+                Thomas J. Brommage,
+                Sam Houston State University
+            </li>
+
+            <li>
                 Paul Feyerabend: Anything Goes
             </li>
 
             <li>
+                Russell Kirk:
                 <a href="kirk.html">
-                Russell Kirk: The Mystery of Human Existence
+                The Mystery of Human Existence
                 </a>
                 <br>
                     Nathanael Blake
             </li>
 
             <li>
-                Jane Jacobs: Critiquing the Rationalist City 
+                Jane Jacobs:
+                Critiquing the Rationalist City 
                 <br>
                     Sanford Ikeda,
                     Purchase College
             </li>
 
             <li>
+                Hans-Georg Gadamer:
                 <a href="gadamer.html">
-                Hans-Georg Gadamer: Anti-Rationalism and Hermeneutics
+                Anti-Rationalism and Hermeneutics
                 </a>
                 <br>
                     Ryan Holston,
@@ -190,12 +217,13 @@
             </li>
 
             <li>
-                Christopher Alexander: The Timeless Way of Building
+                Christopher Alexander:
+                The Timeless Way of Building
             </li>
 
             <li>
-                <a href="macintyre.html">
                 Alasdair MacIntyre:
+                <a href="macintyre.html">
                 Modern Moral Philosophy, Virtue, and Pluralism:  MacIntyre and
                 the Quest for the Human <i>Telos</i>
                 </a>
@@ -205,7 +233,8 @@
             </li>
 
             <li>
-                James C. Scott: Seeing Like a Rationalist
+                James C. Scott:
+                Seeing Like a Rationalist
             </li>
 
         </ul>
