Adding anti-rats to the main index.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -159,8 +159,11 @@
             </li>
 
             <li>
-                F.A. Hayek: The Errors of Constructivist Rationalism 
+                F.A. Hayek:
+                The Errors of Constructivist Rationalism 
                 <br>
+                Nick Cowen,
+                NYU
             </li>
 
             <li>
@@ -171,7 +174,8 @@
             </li>
 
             <li>
-                Eric Voegelin: Don't Immanentize the Eschaton
+                Eric Voegelin:
+                Don't Immanentize the Eschaton
             </li>
 
             <li>
