--- a/index.html
+++ b/index.html
@@ -26,26 +26,23 @@
 			Studies on Rationalism
 		</h1>
             <div style="text-align:center">
-                <br>
-                <div style="text-align:center">
-                    <br>
+                <p>
                     "Like Midas, the Rationalist is always in the 
                     unfortunate position of not being able to touch
                     anything, without transforming it into an abstraction; he can
                     never get a square meal of experience." -- Michael Oakeshott
-                    <br>
-                </div>
-                <br>
-                <br>
+                </p>
+
                 <hr>
 
                 <h2>
                     Topics
                 </h2>
 
+
                 <h3>
-                    <a href="https://gcallah.github.io/FourCritics/">
-                        Critics of Rationalism
+                    <a href="AntiRats/index.html">
+                        Critics of Enlightenment Rationalism
                     </a>
                 </h3>
 
@@ -85,30 +82,35 @@
                 <h2>
                     Other Material
                 </h2>
-                <p>
+                <ul>
+                    <li>
                     <a
                         href="https://www.amazon.com/Oakeshott-America-British-Idealist-Studies/dp/1845403134/ref=sr_1_fkmr0_1?ie=UTF8&qid=1477533017&sr=8-1-fkmr0&keywords=Oakeshott+on+Rome+and+America">
                         Oakeshott on Rome and America at Amazon
                     </a>
-                    <br>
-                    <br>
+                    </li>
+
+                    <li>
                     <a
                         href="http://www.theamericanconservative.com/articles/oakeshott-vs-america-112/">
                         Oakeshott Versus America
                     </a>
-                    <br>
-                    <br>
+                    </li>
+
+                    <li>
                     <a
                         href="http://www.libertylawsite.org/book-review/oakeshott-and-the-american-founding/">
                         Oakeshott and the American Founding
                     </a>
-                    <br>
-                    <br>
+                    </li>
+
+                    <li>
                     <a
                         href="https://rowman.com/ISBN/9781498571722/Tradition-v.-Rationalism-Voegelin-Oakeshott-Hayek-and-Others">
                         Tradition v. Rationalism
                     </a>
-                </p>
+                    </li>
+                </ul>
             </div>
 
     </body>
