Updating index page of anti-rats.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h2>
                     Other Material
                 </h2>
-                <ul>
+                <ul class="centered">
                     <li>
                     <a
                         href="https://www.amazon.com/Oakeshott-America-British-Idealist-Studies/dp/1845403134/ref=sr_1_fkmr0_1?ie=UTF8&qid=1477533017&sr=8-1-fkmr0&keywords=Oakeshott+on+Rome+and+America">
