--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -15,6 +15,11 @@
 
         <ul>
             <li>
+                <span class="contrib">Corey Abel</span>
+
+            </li>
+
+            <li>
                 <span class="contrib">Nathanael Blake</span>
                  earned a PhD in political theory from the
                 Catholic University of America, and has written for a variety
@@ -22,6 +27,7 @@
             </li>
 
             <li>
+                <a name="brommage">
                 <span class="contrib">Thomas J. Brommage</span>
                  earned his Ph.D. in philosophy at the
                 University of South Florida, writing on Wittgenstein’s early
@@ -34,6 +40,7 @@
                 Tampa, Misericordia University and the University of West
                 Georgia. He is currently a Lecturer at Sam Houston State
                 University in Huntsville, TX.
+                </a>
             </li>
 
             <li>
@@ -45,6 +52,29 @@
                 and editor of <i>Tradition v. Rationalism</i>. He teaches
                 at New York University.
                 </a>
+            </li>
+
+            <li>
+                <span class="contrib">W. John Coats</span>
+                is the author of <i>The Activity of Politics</i>,
+                <i>A Theory of Republican Character</i>,
+                <i>Statesmanship</i>,
+                <i>Oakeshott and His Contemporaries</i>,
+                <i>Political Theory and Practice</i>,
+                <i>Montaigne's Essais</i>
+                and <i>Armed Force and Moderate Political Life</i>,
+                and co-author of
+                <i>The Poetic Character of Human Activity</i>.
+
+            </li>
+
+            <li>
+                <span class="contrib">Nick Cowen</span>
+                is a political scientist with interests in political theory,
+                law and public policy. He wrote his doctoral dissertation at
+                King's College London on the political economy of distributive
+                justice.
+
             </li>
 
             <li>
@@ -61,7 +91,7 @@
                 <span class="contrib">Ryan R. Holston</span>
                  is Associate Professor at Virginia Military
                 Institute in Lexington, VA, where he teaches political theory.
-                He is also an Associate Editor at the journal Humanitas.  Dr.
+                He is also an Associate Editor at the journal <i>Humanitas</i>.  Dr.
                 Holston received his Ph.D. from The Johns Hopkins University,
                 his M.Sc. from The London School of Economics and Political
                 Science, and his B.A. from Dickinson College.  His published
@@ -90,6 +120,34 @@
             </li>
 
             <li>
+                <a name="ikeda">
+                <span class="contrib">Sanford Ikeda</span>
+                </a>
+                is Professor of Economics at SUNY Purchase. He is an
+                internationally recognized scholar of Jane Jacobs' work, and the
+                author of <i>Dynamics of the Mixed Economy: Toward a Theory of
+                    Interventionism</i>.
+            </li>
+
+            <li>
+                <a name="knepper">
+                <span class="contrib">Steven Knepper</span>
+                </a>
+            </li>
+
+            <li>
+                <a name="marsh">
+                <span class="contrib">Leslie Marsh</span>'s
+                research falls at the confluence of non-Cartesian cognitive
+                science, philosophy of mind, social epistemology, philosophy of
+                social science, social philosophy and computational
+                intelligence. He is the editor of <i>Cosmos and Taxis</i>,
+                the founder of the Michael Oakeshott Association, and has
+                written and edited numerous books and scholarly papers.
+                </a>
+            </li>
+
+            <li>
                 <a name="mcintyre">
                 <span class="contrib">Kenneth B. McIntyre</span>
                  is an associate professor of political
@@ -104,6 +162,14 @@
                 working on a book on value pluralism, liberty, and the rule of
                 law.
                 </a>
+            </li>
+
+            <li>
+                <span class="contrib">Luke Sheahan</span>
+                is a Post-Doctoral Associate and Research Fellow in the
+                Department of Political Science at Duke University. He
+                researches the intersection of First Amendment rights and
+                political theory.
             </li>
 
             <li>
@@ -124,6 +190,10 @@
                 Group; he also contributed a chapter on Eric Voegelin to
                 <i>Tradition v. Rationalism: Voegelin, Oakeshott, Hayek, and
                     Others</i>.
+            </li>
+
+            <li>
+                <span class="contrib">Rob Wyllie</span>
             </li>
 
         </ul>
