--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -47,15 +47,21 @@
             anti-rationalist thought. Below is a list of chapters,
             along with the author for the chapter, and a link to the
             abstract, if available.
-            <br />
-            Contributor bios can be <a href="bios.html">found here</a>. 
         </p>
 
         <ul>
             <li>
-                Introduction: Setting the Stage
+                <a href="intro.html">
+                Introduction
+                </a>
                 <br>
-                    Gene Callahan and Kenneth McIntyre
+                    <a href="bios.html#callahan">
+                    Gene Callahan
+                    </a>
+                    and
+                    <a href="bios.html#mcintyre">
+                    Kenneth McIntyre
+                    </a>
             </li>
 
             <li>
@@ -68,7 +74,9 @@
                 A Rational and Political Critique of Rationality in Politics
                 </a>
                 <br>
+                    <a href="bios.html#horcher">
                     Ferenc Hörcher,
+                    </a>
                     Pázmány Péter Catholic University, Budapest
                     and The Institute of Philosophy of the Hungarian Academy of
                     Sciences
@@ -77,13 +85,18 @@
             <li>
                 Søren Kierkegaard:
                 <br />
-                Rob Wyllie
+                    <a href="bios.html#Wyllie">
+                    Rob Wyllie
+                    </a>
             </li>
 
             <li>
                 Fyodor Dostoevsky:
                 <br />
-                Leslie Marsh
+                    <a href="bios.html#marsh">
+                    Leslie Marsh
+                    </a>,
+                    The University of British Columbia
             </li>
 
             <li>
@@ -92,7 +105,9 @@
                 What the Tortoise Said to Achilles
                 </a>
                 <br>
+                    <a href="bios.html#callahan">
                     Gene Callahan,
+                    </a>
                     New York University
             </li>
 
@@ -102,7 +117,9 @@
                 The Hammer Goes to Monticello
                 </a>
                 <br>
+                    <a href="bios.html#garrison">
                     Justin Garrison,
+                    </a>
                     Roanoke College
             </li>
 
@@ -122,20 +139,26 @@
                 T.S. Eliot: 
                 Systems So Perfect That No One Has to Be Good
                 <br>
+                    <a href="bios.html#abel">
                     Corey Abel
+                    </a>
             </li>
 
             <li>
                 C.S. Lewis: The Abolition of Man
                 <br />
-                Luke Sheahan,
-                Duke University
+                    <a href="bios.html#sheahan">
+                    Luke Sheahan,
+                    </a>
+                    Duke University
             </li>
 
             <li>
                 Ludwig Wittgenstein: Forms of Life
                 <br>
+                    <a href="bios.html#sportiello">
                     Daniel Sportiello
+                    </a>
             </li>
 
             <li>
@@ -148,8 +171,10 @@
             <li>
                 Michael Oakeshott: Rationalism Is Irrational 
                 <br />
-                John Coats,
-                Connecticut College
+                    <a href="bios.html#sportiello">
+                    John Coats,
+                    </a>
+                    Connecticut College
             </li>
 
             <li>
@@ -162,15 +187,19 @@
                 F.A. Hayek:
                 The Errors of Constructivist Rationalism 
                 <br>
-                Nick Cowen,
-                NYU
+                    <a href="bios.html#cowen">
+                    Nick Cowen,
+                    </a>
+                    New York University
             </li>
 
             <li>
                 Isaiah Berlin:
                 <br>
                     Jason Ferrell,
+                    <a href="bios.html#ferrell">
                     Concordia University
+                    </a>
             </li>
 
             <li>
@@ -206,7 +235,9 @@
                 Jane Jacobs:
                 Critiquing the Rationalist City 
                 <br>
+                    <a href="bios.html#ikeda">
                     Sanford Ikeda,
+                    </a>
                     Purchase College
             </li>
 
@@ -216,7 +247,9 @@
                 Anti-Rationalism and Hermeneutics
                 </a>
                 <br>
+                    <a href="bios.html#holston">
                     Ryan Holston,
+                    </a>
                     VMI
             </li>
 
@@ -232,7 +265,9 @@
                 the Quest for the Human <i>Telos</i>
                 </a>
                 <br>
+                    <a href="bios.html#mcintyre">
                     Kenneth McIntyre,
+                    </a>
                     Sam Houston State University
             </li>
 
