--- a/AntiRats/intro.html
+++ b/AntiRats/intro.html
@@ -2,42 +2,67 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
             Introduction
         </title>
     </head>
 
     <body>
+            <div style="text-align:center">
+                <p>
+                <img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%"><img
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="8%">
+                </p>
+            </div>
         <h1>
             Introduction
         </h1>
 
         <p>
-            The aim of this project is to provide an overview of the many
-            critics of Enlightenment rationalism. The essays on each thinker
-            are intended not merely to offer an overview of that thinker, but
-            also to place him or her in the context of this larger stream of
-            anti-rationalist thought.
+            Enlightenment rationalism may be said to have been birthed
+            with the writings of Francis Bacon and René Descartes, and to have 
+            come to self-awareness in the works of the French philosophes
+            (e.g., Voltaire, Diderot, Condorcet, and d'Alembert),
+            and their allies, such as Benjamin Franklin, Immanuel Kant, and
+            Thomas Paine. But almost contemporaneously with the birth of 
+            this movement, it attracted critics.
         </p>
 
         <p>
-            Some my wonder at the mixed bag of thinkers we address: poets,
+            The aim of this project is to provide an overview of some of the
+            most important of the many critics of Enlightenment rationalism.
+            The essays on each thinker are intended not merely to offer a
+            commentary on that thinker, but also to place him or her in the
+            context of this larger stream of anti-rationalist thought.
+        </p>
+
+        <p>
+            Some may wonder at the mixed bag of thinkers we address: poets,
             philosophers, economists, mathematicians, novelists, political
             theorists, urbanists, and philosophers. But there is unity in this
-            diversity.
+            diversity. Although these diverse authors worked in a variety of
+            forms, they all sought to demonstrate the serious limitations in
+            rationalism's description of the human situation.
         </p>
 
         <p>
             As I think I have shown in my work on Oakeshott, his
             political criticism of rationalism sprang directly from his
             philosophical view of the modes of experience: the rationalist in
-            politics was guilty of an ignoratio elenchi. And what would a
-            general critique would be but a philosophical one expressed without
-            technical philosophical language. When Eliot writes of men
-            "dreaming of systems so perfect that no one has to be good," he is
-            expressing in poetry what Oakeshott expressed in verse. (And they
-            share a common source in Bradley!)
+            politics was guilty of an <i>ignoratio elenchi</i>. 
+            And when Eliot writes of men "dreaming of systems so perfect that
+            no one has to be good," he is expressing in poetry what Oakeshott
+            expressed in verse.
         </p>
 
     </body>
